fix pagination, add chat service, add notification service
