# swagger/swagger.json
@@ -1359,6 +1359,15 @@
                 }
             }
         },
+        "/notification/": {
+            "get": {
+                "tags": [
+                    "notification"
+                ],
+                "description": "WebSocket",
+                "operationId": "WebsocketController.WebSocket"
+            }
+        },
         "/owner/": {
             "put": {
                 "tags": [
@@ -1480,6 +1489,46 @@
                     },
                     "403": {
                         "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/owner/notification/": {
+            "get": {
+                "tags": [
+                    "owner"
+                ],
+                "description": "get all renters",
+                "operationId": "OwnerController.GetNotice",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "token",
+                        "description": "The owner name string",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "page",
+                        "description": "The page",
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "length",
+                        "description": "Page length",
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResNotification"
+                        }
                     }
                 }
             }
@@ -2394,6 +2443,25 @@
                 }
             }
         },
+        "models.Notification": {
+            "title": "Notification",
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "owner_id": {
+                    "type": "string"
+                },
+                "seen": {
+                    "type": "boolean"
+                },
+                "send_time": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
         "models.Owner": {
             "title": "Owner",
             "type": "object",
@@ -2490,6 +2558,28 @@
                 },
                 "renter_name": {
                     "type": "string"
+                }
+            }
+        },
+        "models.ResNotification": {
+            "title": "ResNotification",
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "notification_id": {
+                    "type": "string"
+                },
+                "owner_id": {
+                    "type": "string"
+                },
+                "seen": {
+                    "type": "boolean"
+                },
+                "send_time": {
+                    "type": "integer",
+                    "format": "int64"
                 }
             }
         },
